--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,9 +3,9 @@
     "configurations": [
         {
             "name": "http://localhost",          
-            "server": "http://192.168.80.59:8080/TKV/",
-            "port": 7249,
-            "serverInstance": "TKV",
+            "server": "http://192.168.80.59:8080/BC240/",
+            "port": 7149,
+            "serverInstance": "BC240",
            "authentication": "UserPassword",
             "type": "al",
             "environmentType": "OnPrem",
@@ -20,3 +20,31 @@
         }
     ]
 }
+
+
+
+// {
+//      "version": "0.2.0",
+//     "configurations": [
+//         {
+//             "name": "http://localhost",
+//             "request": "launch",
+//             "type": "al",
+//             "environmentType": "OnPrem",
+//             "server": "http://192.168.80.54:8080/TKV/",
+//             "serverInstance": "TKV",
+//             "port": 7086,
+//             "authentication": "UserPassword",
+//             "startupObjectId": 50150,
+//             "startupObjectType": "Page",
+//             "breakOnError": "All",
+//             "launchBrowser": true,
+//             "enableLongRunningSqlStatements": true,
+//             "enableSqlInformationDebugger": true,
+//             "tenant": "default",
+//             "usePublicURLFromServer": true,
+//             "schemaUpdateMode": "ForceSync"
+//         }
+//     ] 
+    
+// }
