--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
 World POS Sdn. Bhd_worldPOS-Report_24.1.0.14.app
+World POS Sdn. Bhd_worldPOS-Report_24.1.0.14.app
+World POS Sdn. Bhd_worldPOS-Report_24.1.0.15.app
+World POS Sdn. Bhd_worldPOS-Report_24.1.0.16.app
+World POS Sdn. Bhd_worldPOS-Report_24.1.0.17.app
+World POS Sdn. Bhd_worldPOS-Report_24.1.0.18.app
+World POS Sdn. Bhd_worldPOS-Report_24.1.0.19.app
+.alpackages/Be One Solutions_Taka Another Extension_1.0.0.6.app
+.alpackages/Be One Solutions_Taka Another Extension_1.0.0.8.app
+.alpackages/Be One Solutions_Taka Another Extension_1.0.0.9.app
+.alpackages/Be One Solutions_Taka Einvoice Extension_1.0.0.15.app
+.alpackages/Be One Solutions_Taka Einvoice Extension_1.0.0.19.app
+.alpackages/Be One Solutions_Taka MKS Extension_1.0.0.9.app
+.alpackages/Be One Solutions_Taka MKS Extension_1.0.0.11.app
+.alpackages/LS Retail_LS Central System App_24.1.1.851.app
+.alpackages/LS Retail_LS Central_24.1.21.1157.app
+.alpackages/World POS Sdn. Bhd._worldPOS-Consignment_24.1.0.39.app
+.alpackages/World POS Sdn. Bhd._worldPOS-Consignment_24.1.0.46.app
+.alpackages/World POS Sdn. Bhd._worldPOS-Consignment_24.1.0.48.app
+.alpackages/World POS Sdn. Bhd._worldPOS-MemberMgt_24.1.0.25.app
+.alpackages/World POS Sdn. Bhd._worldPOS-MemberMgt_24.1.0.26.app
+.alpackages/World POS Sdn. Bhd._worldPOS-MemberMgt_24.1.0.36.app
+.alpackages/World POS Sdn. Bhd._worldPOS-StaffAllowance_1.0.0.43.app
+.alpackages/World POS Sdn. Bhd._worldPOS-StaffAllowance_1.0.0.44.app
+.alpackages/World POS Sdn. Bhd._worldPOS-StaffAllowance_1.0.0.58.app
+World POS Sdn. Bhd_worldPOS-Report_24.1.0.14.app
+.alpackages/LS Retail_LS Central System App_24.1.1.851.app
+.alpackages/LS Retail_LS Central_24.1.21.1157.app
