--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,5 +46,31 @@
             "schemaUpdateMode": "ForceSync"
         }
     ] 
-    
 }
+
+//302
+// {
+//      "version": "0.2.0",
+//     "configurations": [
+//         {
+//             "name": "http://localhost",
+//             "request": "launch",
+//             "type": "al",
+//             "environmentType": "OnPrem",
+//             "server": "http://192.168.33.108:8080/tkvposprd/",
+//             "serverInstance": "tkvposprd",
+//             "port": 9049,
+//             "authentication": "UserPassword",
+//             "startupObjectId": 50150,
+//             "startupObjectType": "Page",
+//             "breakOnError": "All",
+//             "launchBrowser": true,
+//             "enableLongRunningSqlStatements": true,
+//             "enableSqlInformationDebugger": true,
+//             "tenant": "default",
+//             "usePublicURLFromServer": true,
+//             "schemaUpdateMode": "ForceSync"
+//         }
+//     ] 
+    
+// }
