--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,18 @@ World POS Sdn. Bhd_worldPOS-Report_24.1.0.19.app
 World POS Sdn. Bhd_worldPOS-Report_24.1.0.14.app
 .alpackages/LS Retail_LS Central System App_24.1.1.851.app
 .alpackages/LS Retail_LS Central_24.1.21.1157.app
+.alpackages/02_Be One Solutions_Taka MKS Extension_1.0.0.11.app
+.alpackages/03_Be One Solutions_Taka Einvoice Extension_1.0.0.19.app
+.alpackages/04_Be One Solutions_Taka Another Extension_1.0.0.9.app
+.alpackages/Be One Solutions_Taka Einvoice Extension_1.0.0.20.app
+.alpackages/Be One Solutions_Taka Einvoice Extension_1.0.0.21.app
+.alpackages/Be One Solutions_Taka Einvoice Extension_1.0.0.23.app
+.alpackages/Be One Solutions_Taka MKS Extension_1.0.0.12.app
+.alpackages/LS Retail_LS Central System App_24.1.1.851.app
+.alpackages/World POS Sdn. Bhd._worldPOS-Consignment_24.1.0.51.app
+.alpackages/World POS Sdn. Bhd._worldPOS-Consignment_24.1.0.52.app
+.alpackages/World POS Sdn. Bhd._worldPOS-Consignment_24.1.0.59.app
+.alpackages/World POS Sdn. Bhd._worldPOS-MemberMgt_24.1.0.40.app
+.alpackages/World POS Sdn. Bhd._worldPOS-MemberMgt_24.1.0.41.app
+.alpackages/LS Retail_LS Central System App_24.1.1.851.app
+.alpackages/LS Retail_LS Central System App_24.1.1.851.app
