--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,50 +1,50 @@
-{
-    "version": "0.2.0",
-    "configurations": [
-        {
-             "name": "http://localhost",          
-            "server": "http://192.168.80.59:8080/BC240/",
-            "port": 7149,
-            "serverInstance": "BC240",
-           "authentication": "UserPassword",
-            "type": "al",
-            "environmentType": "OnPrem",
-            "request": "launch",
-            "startupObjectId": 10000701,
-            "startupObjectType": "Page",
-            "breakOnError": "All",
-            "launchBrowser": true,
-            "enableLongRunningSqlStatements": true,
-            "enableSqlInformationDebugger": true,
-            "schemaUpdateMode": "ForceSync"
-        }
-    ]
-}
-
 // {
-//      "version": "0.2.0",
+//     "version": "0.2.0",
 //     "configurations": [
 //         {
-//             "name": "http://localhost",
-//             "request": "launch",
+//              "name": "http://localhost",          
+//             "server": "http://192.168.80.59:8080/BC240/",
+//             "port": 7149,
+//             "serverInstance": "BC240",
+//            "authentication": "UserPassword",
 //             "type": "al",
 //             "environmentType": "OnPrem",
-//             "server": "http://192.168.80.54:8080/TKV/",
-//             "serverInstance": "TKV",
-//             "port": 7086,
-//             "authentication": "UserPassword",
-//             "startupObjectId": 50150,
+//             "request": "launch",
+//             "startupObjectId": 10000701,
 //             "startupObjectType": "Page",
 //             "breakOnError": "All",
 //             "launchBrowser": true,
 //             "enableLongRunningSqlStatements": true,
 //             "enableSqlInformationDebugger": true,
-//             "tenant": "default",
-//             "usePublicURLFromServer": true,
 //             "schemaUpdateMode": "ForceSync"
 //         }
-//     ] 
+//     ]
 // }
+
+{
+     "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "http://localhost",
+            "request": "launch",
+            "type": "al",
+            "environmentType": "OnPrem",
+            "server": "http://192.168.80.54:8080/TKV/",
+            "serverInstance": "TKV",
+            "port": 7086,
+            "authentication": "UserPassword",
+            "startupObjectId": 50150,
+            "startupObjectType": "Page",
+            "breakOnError": "All",
+            "launchBrowser": true,
+            "enableLongRunningSqlStatements": true,
+            "enableSqlInformationDebugger": true,
+            "tenant": "default",
+            "usePublicURLFromServer": true,
+            "schemaUpdateMode": "ForceSync"
+        }
+    ] 
+}
 
 //302
 // {
